@@ -11,6 +11,10 @@ def check_mkevents_arguments(params):
             args += "-H %s " % quote_shell_string(remote)
     if params.get("ignore_acknowledged"):
         args += "-a "
+
+    if params.get("less_verbose"):
+        args += "-l "
+
     args += params.get("hostspec", "$HOSTADDRESS$")
     if "application" in params:
         args += " " + quote_shell_string(params["application"])
