@@ -1938,6 +1938,19 @@ register_rule(
                   totext = _("acknowledged events will not be honored"),
                  )
             ),
+            ( "less_verbose",
+              FixedValue(
+                  True,
+                  title = _("Less Verbose Output"),
+                  help = _("If enabled the check reports less information in its output.<br>"
+                           "You will see no information regarding the worst state or unacknowledged events.<br>"
+                           " For example a default output without this option <br>"
+                           "<tt>WARN - 1 events (1 unacknowledged), worst state is WARN (Last line: Incomplete Content)</tt><br>"
+                           "Output with less verbosity<br>"
+                           "<tt>WARN - 1 events (Worst line: Incomplete Content)</tt><br>"
+                            ),
+                 )
+            ),
             ( "remote",
               Alternative(
                   title = _("Access to the Event Console"),
@@ -1976,7 +1989,7 @@ register_rule(
             )
           ),
         ],
-        optional_keys = [ "application", "remote", "ignore_acknowledged", "item" ],
+        optional_keys = [ "application", "remote", "ignore_acknowledged", "less_verbose", "item" ],
     ),
     match = 'all',
 )
