@@ -68,6 +68,7 @@
     * 0784 Improved security of WATO bulk inventory by using transaction ids
     * 0880 Added support for 389 Directory Server to LDAP connector
     * 0607 online help text for host creation in WATO now also explains hostname caching
+    * 0908 Check event state: New option "Less Verbose Output"...
     * 0781 FIX: host diag page: fixed problem with update of diagnose subwindows...
     * 0904 FIX: Fixed exception in host parameter overview...
 
